# duplicate_scan

./: .coderabbit_review_duplicate-scan_task-4_round-1_develop.txt  .coderabbit_review_duplicate-scan_task-4_round-2_develop.txt  .coderabbit_review_duplicate-scan_task-5_round-1_develop.txt  .coderabbit_review_duplicate-scan_task-6_round-1_develop.txt  .coderabbit_review_duplicate-scan_task-6_round-2_develop.txt  .gitignore  conftest.py  pyproject.toml
.github/workflows/: droid.yml  tests.yml
.spec-workflow/specs/duplicate-scan/: design.md  requirements.md  tasks.md
.spec-workflow/specs/duplicate-scan/Implementation Logs/: task-10_2025-11-26T1523_9a7bd6b9.md  task-2_2025-11-26T0433_b16a848c.md  task-3_2025-11-26T0544_294a49b3.md  task-4_2025-11-26T0444_a4b6264a.md  task-4_2025-11-26T0706_cb70511c.md  task-5_2025-11-26T0926_88225fb2.md  task-6_2025-11-26T1122_c2d86770.md  task-7_2025-11-26T1148_0f3690e8.md  task-9_2025-11-26T1440_5a811343.md
.spec-workflow/steering/: tech.md
deleted_files_20251127_025858/: duplicate1.txt  file2.txt
scripts/: run_coverage.sh  run_tests.sh
src/: __init__.py  main.py
src/models/: __init__.py  duplicate_group.py  file_meta.py  scan_config.py
src/services/: __init__.py  deleter.py  detector.py  hasher.py
src/ui/: __init__.py  cleanup_view.py  home_view.py  progress_view.py  results_view.py  scanning_view.py
tests/: test_cleanup_view.py  test_deleter.py  test_detector.py  test_hasher.py  test_hasher_refactor.py  test_hasher_xxhash.py  test_home_view.py  test_main.py  test_mainview_optimized.py  test_mainview_progress.py  test_models.py  test_progress_view.py  test_results_view.py  test_scan_config.py  test_scan_optimization.py  test_scanning_view.py
tests/integration/: conftest.py  test_flow.py  test_ui_integration.py
tests/unit/: test_hasher.py
