[project]
name = "duplicate-scan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.28.3",
    "send2trash>=1.8.3",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "poethepoet>=0.38.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.ruff]
lint.select = [
    "S",  # flake8-bandit (セキュリティチェック)
]

[tool.mypy]
ignore_missing_imports = true

[tool.poe.tasks]
format = "uv run ruff format ."
lint = "uv run ruff check --fix ."
type-check = "uv run mypy ."
check = ["format", "lint", "type-check"]
